--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 body {
-    font-family: 'Inter', sans-serif;
-    background-color: rgb(249 250 251);
+  font-family: "Inter", sans-serif;
+  background-color: rgb(249 250 251);
 }
